--- a/.github/workflows/spell_checking.yml
+++ b/.github/workflows/spell_checking.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Download textidot
         run: wget https://github.com/sylvainhalle/textidote/releases/download/v0.8.1/textidote.jar
       - name: Run textidot
-        run: now=$(date +"%m_%d_%Y") && mkdir -p spell && java -jar textidote.jar --check en --dict dico.txt --output json main.tex > report.json || true
+        run: now=$(date +"%m_%d_%Y") && mkdir -p spell && java -jar textidote.jar --check en --dict dico.txt --output json kththesis/examplethesis.tex> report.json || true
       - name: Run textidot
-        run: now=$(date +"%m_%d_%Y") && mkdir -p spell && java -jar textidote.jar --check en --dict dico.txt --output html main.tex > report.html || true
+        run: now=$(date +"%m_%d_%Y") && mkdir -p spell && java -jar textidote.jar --check en --dict dico.txt --output html kththesis/examplethesis.tex > report.html || true
       - name: Create pdf
         run: sudo apt-get update && sudo apt-get install chromium-browser -y && chromium-browser  --headless --disable-gpu --print-to-pdf=report.pdf report.html
       - name: Create issue content
