--- a/.github/workflows/spell_checking.yml
+++ b/.github/workflows/spell_checking.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run textidot
         run: now=$(date +"%m_%d_%Y") && mkdir -p spell && java -jar textidote.jar --check en --dict dico.txt --output html kththesis/examplethesis.tex > report.html || true
       - name: Create pdf
-        run: sudo apt-get update && sudo apt-get install chromium-browser -y && chromium-browser  --headless --disable-gpu --print-to-pdf=report.pdf report.html
+        run: sudo apt-get update && sudo apt-get install chromium-browser python3 -y && chromium-browser  --headless --disable-gpu --print-to-pdf=report.pdf report.html
       - name: Create issue content
         run: python3 .github/parse_json2md.py report.json kththesis/examplethesis.tex $(git log -n 1 --pretty=%H) $(git config --get remote.origin.url) > report.md
 
@@ -25,7 +25,7 @@ jobs:
         run: git config --global user.email "action@github.com" && git config --global user.name "GitHub Action"
         
       - name: GIT
-        run: git rm -rf . && git checkout -b reports && git add report.json report.pdf && git commit -m 'Spell check report' 
+        run: git rm -rf . && git checkout -b reports && git add report.json report.html report.pdf && git commit -m 'Spell check report' 
         
       - name: GIT
         run: git push origin reports --force
